# Nexus-Vpn

./: .gitignore  Cargo.toml  FINAL_COMPLETE_FIX.py  FINAL_FIX.py  FINAL_WORKING_FIX.py  FIX_TOR_ONCE_AND_FOR_ALL.py  LICENSE  MASTERPLAN.md  MASTERPLAN_V2.md  PERMISSIONS.md  QUICKSTART_TERMUX.sh  README.md  RECOVER_CODE_NOW.sh  aggressive_fix.py  analyzer  analyzer.rs  audit_and_fix_kotlin.sh  auto_fix.py  brace_checker.py  build.gradle.kts  build.sh  clean_brace_fix.py  deep_analyze  deep_analyze.rs  deep_audit  deep_audit.rs  deep_audit_fix.py  direct_fix.py  emergency_fix.py  exact_missing_brace.py  final_arti_fix.py  final_arti_integration.py  final_brace_fix.py  final_clone_fix.py  final_corrections.py  final_fix.py  final_fix.sh  final_fix_all.py  final_fix_all_remaining.py  final_fix_complete.py  (+119 more)
.github/workflows/: build-apk.yml  build.yml
.qwen/: settings.json  settings.json.orig
android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/nexusvpn/android/: MainActivity.kt  NexusVpnApplication.kt
android/app/src/main/kotlin/com/nexusvpn/android/data/: PreferencesManager.kt  Prefs.kt
android/app/src/main/kotlin/com/nexusvpn/android/receiver/: BootCompleteReceiver.kt  BootReceiver.kt  NetworkChangeReceiver.kt
android/app/src/main/kotlin/com/nexusvpn/android/service/: NexusVpnService.kt  SniProxyService.kt  TorService.kt  VpnMonitoringService.kt
android/app/src/main/kotlin/com/nexusvpn/android/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_vpn.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
app/: build.gradle.kts
rust-core/: Cargo.toml
rust-core/src/: dual_log.rs  lib.rs  proxy.rs  stack.rs  tcp.rs  tun.rs
rust-core/src/sni/: Cargo.toml  error.rs  mod.rs  parser.rs  rewriter.rs  transport.rs
rust/core/: Cargo.toml  FINAL_TOR_FIX.py  fix_tor_working.py
rust/core/src/: lib.rs  lib.rs.bak
