[workspace]
members = ["rust/core"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Root package
[package]
name = "nexus-vpn"
version = "1.0.0"
edition = "2021"
authors = ["Nexus VPN Team"]
license = "MIT"
description = "World's most secure SNI+Tor VPN - Pure Rust"
repository = "https://github.com/YOUR_USERNAME/nexus-vpn"
homepage = "https://github.com/YOUR_USERNAME/nexus-vpn"
documentation = "https://docs.rs/nexus-vpn/"

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/core/src/lib.rs"

[[bin]]
name = "nexus-vpn-test"
path = "rust/core/src/main.rs"
required-features = ["test-binary"]

[features]
default = []
test-binary = []

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
rustls = "0.21"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
derivative = "2.2"
futures = "0.3"
jni = "0.21"
android-logger = "0.13"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.8"
ndk-glue = "0.8"

[dev-dependencies]
criterion = "0.5"
