[package]
name = "nexus-vpn"
version = "0.40.0"
description = "World's most powerful SNI + Tor VPN — Pure Rust"
authors = ["Nexus VPN Contributors"]
license = "GPL-3.0"
edition = "2024"

[lib]
name = "nexus_vpn"
crate-type = ["cdylib"]

[dependencies]
arti-client       = "0.40.0"
arti-hsconfig     = "0.40.0"
arti-client-config = "0.40.0"

tokio             = { version = "1.42", features = ["full"] }
futures           = "0.3"
serde_json        = "1.0"
serde             = { version = "1.0", features = ["derive"] }
chrono            = { version = "0.4", features = ["serde"] }

android_logger    = "0.14"
jni               = { version = "0.21", default-features = false }
log               = "0.4"
thiserror         = "1.0"
anyhow            = "1.0"
bytes             = "1.10"
socket2           = "0.5"
