[package]
name = "nexus-vpn"
version = "0.41.0"
description = "World's most powerful SNI + Tor VPN — Pure Rust"
authors = ["Nexus VPN Contributors"]
license = "GPL-3.0"
edition = "2024"

[lib]
name = "nexus_vpn"
crate-type = ["cdylib"]

[dependencies]
# Tor / Arti
arti-client       = { version = "0.40.0", default-features = false, features = ["tokio", "rustls", "compression", "bridge-client", "pt-client", "hs-client", "anyhow"] }
tor-rtcompat      = { version = "0.40.0", default-features = false, features = ["tokio", "rustls"] }

# Networking
smoltcp           = { version = "0.12", default-features = false, features = ["std", "log", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "socket-raw"] }
etherparse        = "0.17"
socket2           = "0.5"

# Async & Utility
tokio             = { version = "1.42", features = ["full"] }
tokio-util        = { version = "0.7", features = ["codec"] }
futures           = "0.3"
parking_lot       = "0.12"
serde_json        = "1.0"
serde             = { version = "1.0", features = ["derive"] }
chrono            = { version = "0.4", features = ["serde"] }

# Android / JNI
android_logger    = "0.14"
jni               = { version = "0.21", default-features = false }
log               = "0.4"
thiserror         = "1.0"
anyhow            = "1.0"
bytes             = "1.10"
