[package]
name = "nexus-vpn"
version = "0.50.0"
description = "SNI + Tor VPN — TUN to local SOCKS proxy"
authors = ["Nexus VPN Contributors"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "nexus_vpn"
crate-type = ["cdylib"]

[dependencies]
# Networking
smoltcp           = { version = "0.12", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp"] }
libc              = "0.2"

# Async & Utility
tokio             = { version = "1.42", features = ["full"] }
parking_lot       = "0.12"
serde_json        = "1.0"
serde             = { version = "1.0", features = ["derive"] }
log               = "0.4"
thiserror         = "1.0"
anyhow            = "1.0"

# Android / JNI
android_log-sys   = "0.3"
jni               = { version = "0.21", default-features = false }
