[package]
name = "nexus-vpn-core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
rustls = "0.23"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
derivative = "2.2"
futures = "0.3"
jni = "0.21"
android_logger = "0.14"
log = "0.4"
arti-client = { version = "2.1.0", features = ["tokio-runtime"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9"
ndk-glue = "0.8"

[dev-dependencies]
criterion = "0.5"
