[package]
name = "nexus-vpn-core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
rustls = "0.23"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
derivative = "2.2"
futures = "0.3"
jni = "0.21"
android_logger = "0.14"
log = "0.4"
anyhow = "1.0"

# Arti with rustls (no openssl dependency)

# Added missing dependencies
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.8"
ndk-glue = "0.7"

[dev-dependencies]
criterion = "0.5"

# Add bundled sqlite3 for Android cross-compilation

# Force sqlite3 to be built from source for Android cross-compilation
